--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.16",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
