--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "material-ui": "^0.19.4",
+    "numeral": "^2.0.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-lazyload": "^2.3.0",
